<resources>
    <string name="app_name">Carer Patient App</string>
    <string name="medicineTitle">Welcome Homer</string>
    <string name="medicineSubtitle">Please Add Medicine</string>
    <string name="medicineButton">Medicine</string>
    <string name="medicineHeader">Please Enter Medicine Details</string>
    <string name="medicinename">Medicine Name</string>
    <string name="reportTitle">Medication Report</string>
    <string name="action_medicine">Medicine</string>
    <string name="action_report">Report</string>

    <string name="enter_medicine_name">Please Enter Medicine Name</string>
    <string name="enter_quantity">Please Enter Quantity</string>
    <string name="enter_time">Please Enter Time</string>
    <string name="enter_frequency">Please Enter Frequency</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="are_you">Are you a Carer or Patient</string>
    <string name="editProfileImage">Edit Profile Image</string>
    <string name="resetPassword">Reset Password</string>


    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email_address">Email Address</string>
    <string name= "my_image_description" >Image</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">Carer Patient App</string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="profile">Profile</string>
    <string name="appointment">Appointment</string>
    <string name="aboutus_title">Homer for President !!</string>
    <string name="aboutus_message">Medicine App to add Medciation !</string>

    <string name="medicinesNotFound">No Medicine added Yet…\nGo add Medicine!</string>
    <string name="remindersNotFound">No Reminder added Yet…\nGo add Reminder!</string>
    <string name="medicineError">Error : Couldn\'t Make a Medciation…</string>
    <string name="medicineDetails">Medicine Details</string>
    <string name="repeat_button">Frequency</string>
    <string name="quantity_amount_selected">Quantity Amount Selected</string>
    <string name="time_selected">Time Selected</string>
    <string name="appointmentTitle">Appointment Title</string>
    <string name="appointmentName">Name</string>
    <string name="appointmentSubtitle">Appointment Sub Titlee</string>
    <string name="enter_appointment_name">Enter Appointment Name </string>
    <string name="appointmentButton">Appointment Button </string>
    <string name="action_appointment">Appointment </string>
    <string name="action_reminder">Reminder </string>
    <string name="action_appointment_list">Appointment List </string>
    <string name="action_reminder_report"> Reminder Report</string>
    <string name="appointmentsNotFound">No Appointments  added Yet…\nGo add Appointment!</string>
    <string name="formatTime">Time Format</string>
    <string name="formatTime2">%1$tI:%1$tM%1$tp</string>
    <string name="appointmentError">Error : Couldn\'t Make a Appointment…</string>
    <string name="messageLoading">Please Wait while the Medication are Loading...</string>
    <string name="messageloadingapp">Please Wait while the Appointment are Loading...</string>
    <string name="medicineName">Name :</string>
    <string name="duration">Duration :</string>
    <string name="medicineType">Type :</string>
    <string name="frequency"> Frequency :</string>
    <string name="time">Time :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="amount">Amount</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="snooze">Snooze</string>

    <string name="auth_failed">Authentication failed</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>

    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="FrequencyButton">Frequency Button</string>

    <string name="notification"> Notification</string>
    <string name="notification_title"> Notification Title</string>
    <string name="notification_channel_id"> Notification Channel id</string>
    <string name="notification_channel_name">Notification Channel name</string>
    <string name="Login">Login</string>

    <string name="timer_running">Timer Running</string>
    <string-array name="days_of_the_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


    <string-array name="List_Medicine_Type">
        <item>Pill</item>
        <item>Capsule</item>
        <item>Syringe</item>
        <item>Drops</item>

    </string-array>

    <plurals name="numberOfSongsAvailable">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>

    <string name="dark_theme_description">Dark mode</string>
    <string name="light_theme_description">Light mode</string>
    <string name="system_theme_description">Following systems theme</string>
    <string name="dark_theme_preference_value">0</string>
    <string name="light_theme_preference_value">1</string>
    <string name="system_theme_preference_value">2</string>
    <string-array name="themes_entries">
        <item>Dark</item>
        <item>Light</item>
        <item>System default</item>
    </string-array>
    <string-array name="themes_values">
        <item>@string/dark_theme_preference_value</item>
        <item>@string/light_theme_preference_value</item>
        <item>@string/system_theme_preference_value</item>
    </string-array>
    <string name="repository_preference_key">about_setting</string>
    <string name="repository_desc">View apps GitHub repository</string>
    <string name="repository_link">https://github.com/Norahackett/Carer_Patient/tree/master</string>
    <string name="group_setting">Settings</string>
    <string name="once_off">Once Off</string>
    <string name="repeat">Repeating</string>
    <string name="settings">Settings</string>
    <string name="select_profile_image">Select Profile Image</string>
</resources>