<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/medicineFragment"
            android:icon="@drawable/ic_baseline_medical"
            android:title="@string/action_medicine" />
        <item
            android:id="@+id/reportFragment"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/action_report" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/action_about" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/person"
            android:title="@string/profile" />
        <item
            android:id="@+id/appointmentFragment"
            android:icon="@drawable/person"
            android:title="@string/appointment" />
        <item
            android:id="@+id/appointmentlistFragment"
            android:icon="@drawable/person"
            android:title="@string/action_appointment_list" />

        <item
            android:id="@+id/reminderFragment"
            android:icon="@drawable/person"
            android:title="@string/action_reminder" />

        <item
            android:id="@+id/reminderreportFragment"
            android:icon="@drawable/person"
            android:title="@string/action_reminder_report" />

        <item
            android:id="@+id/eggtimerFragment"
            android:icon="@drawable/person"
            android:title="@string/action_eggtimer" />
    </group>
    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_send" />
        </menu>
    </item>
    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/signout"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>

