<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/reportFragment">

    <fragment
        android:id="@+id/medicineFragment"
        android:name="ie.wit.carerpatient.ui.medicine.MedicineFragment"
        android:label="@string/action_medicine"
        tools:layout="@layout/fragment_medicine" >
        <action
            android:id="@+id/action_medicineFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/reminderFragment"
        android:name="ie.wit.carerpatient.ui.reminder.ReminderFragment"
        android:label="@string/action_reminder"
        tools:layout="@layout/fragment_reminder" >
        <action
            android:id="@+id/action_reminderFragment_to_reminderreportFragment"
            app:destination="@id/reminderreportFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/appointmentFragment"
        android:name="ie.wit.carerpatient.ui.appointment.AppointmentFragment"
        android:label="@string/action_appointment"
        tools:layout="@layout/fragment_appointment" >
        <action
            android:id="@+id/action_appointmentFragment_to_appointmentlistFragment"
            app:destination="@id/appointmentlistFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>


    <fragment
        android:id="@+id/profileFragment"
        android:name="ie.wit.carerpatient.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_ProfileFragment_to_reportFragment"
            app:destination="@id/reportFragment" />
        <argument
            android:name="medicineid"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/reportFragment"
        android:name="ie.wit.carerpatient.ui.report.ReportFragment"
        android:label="@string/action_report"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_reportFragment_to_medicineFragment"
            app:destination="@id/medicineFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_reportFragment_to_DetailFragment"
            app:destination="@id/DetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/reminderreportFragment"
        android:name="ie.wit.carerpatient.ui.reminderreport.ReminderreportFragment"
        android:label="@string/action_reminder"
        tools:layout="@layout/fragment_reminderreport" >
        <action
            android:id="@+id/action_reminderreportFragment_to_reminderFragment"
            app:destination="@id/reminderFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_reminderreportFragment_to_ReminderdetailFragment"
            app:destination="@id/ReminderdetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/appointmentlistFragment"
        android:name="ie.wit.carerpatient.ui.appointmentlist.AppointmentListFragment"
        android:label="@string/action_appointment_list"
        tools:layout="@layout/fragment_appointmentlist" >
        <action
            android:id="@+id/action_appointmentlistFragment_to_appointmentFragment"
            app:destination="@id/appointmentFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />

        <action
            android:id="@+id/action_appointmentlistFragment_to_appointmentdetailFragment"
            app:destination="@id/AppointmentDetailFragment" />

    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.wit.carerpatient.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/DetailFragment"
        android:name="ie.wit.carerpatient.ui.detail.DetailFragment"
        android:label="Medicine Details"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_DetailFragment_to_reportFragment"
            app:destination="@id/reportFragment" />
        <argument
            android:name="medicineid"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/AppointmentDetailFragment"
        android:name="ie.wit.carerpatient.ui.appointmentdetail.AppointmentDetailFragment"
        android:label="Appointment Details"
        tools:layout="@layout/fragment_appointmentdetail" >
        <action
            android:id="@+id/action_AppointmentDetailFragment_to_appointmentlistFragment"
            app:destination="@id/appointmentlistFragment" />
        <argument
            android:name="appointmentid"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/ReminderdetailFragment"
        android:name="ie.wit.carerpatient.ui.reminderdetail.ReminderdetailFragment"
        android:label="Reminder Details"
        tools:layout="@layout/fragment_reminderdetail" >
        <action
            android:id="@+id/action_ReminderdetailFragment_to_reminderreportFragment"
            app:destination="@id/reminderreportFragment" />
        <argument
            android:name="reminderid"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/eggtimerFragment"
        android:name="ie.wit.carerpatient.ui.notification.EggTimerFragment"
        android:label="@string/action_eggtimer"
        tools:layout="@layout/fragment_egg_timer" />

</navigation>

